--- a/frontend/src/app/modules/features/scripts/components/script-overview/script-overview.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-overview/script-overview.component.html
@@ -86,7 +86,7 @@
     >{{ this.deleteError }}</app-alert
     >
     Sicher, dass du
-    <i>{{ script?.name }} </i>
+    <i class="text-break">{{ script?.name }} </i>
     <strong class="text-primary">unwiderruflich löschen</strong>
     möchtest möchtest?
   </app-modal>
@@ -104,7 +104,7 @@
       this.deleteError
       }}</app-alert>
     Sicher, dass du
-    <i>{{ script?.name }} </i>
+    <i class="text-break">{{ script?.name }} </i>
     verlassen möchtest?
   </app-modal>
 </ng-template>
