--- a/frontend/src/app/modules/features/scripts/components/script-roles-list/script-roles-list.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-roles-list/script-roles-list.component.html
@@ -5,7 +5,7 @@
   [ngbTooltip]="role !== selectedRole && showTooltips ? 'Rolle auswählen' : ''"
   class="badge badge-{{ theme }} badge-{{ size }} btn mb-{{
     size === 'lg' ? 2 : 3
-  }} me-{{ size === 'lg' ? 2 : 3 }}"
+  }} me-{{ size === 'lg' ? 2 : 3 }} text-truncate mw-100"
   placement="bottom"
   type="button"
 >
