--- a/frontend/src/app/modules/features/scripts/components/script-upload/script-upload.component.html
+++ b/frontend/src/app/modules/features/scripts/components/script-upload/script-upload.component.html
@@ -25,7 +25,7 @@
               >
                 <span>
                   Momentan hast du
-                  <em> {{ form?.value?.file?.name }} </em>
+                  <em class="text-break d-block mw-100"> {{ form?.value?.file?.name }} </em>
                   ausgewählt.
                 </span>
                 <button
