--- a/frontend/src/app/modules/features/profile/profile.component.html
+++ b/frontend/src/app/modules/features/profile/profile.component.html
@@ -37,7 +37,7 @@
       </div>
     </div>
 
-    <div class="profileData mb-5 mt-4 d-flex">
+    <div class="profileData mb-5 mt-4 d-flex flex-column">
       <div class="d-flex flex-column">
         <h3 class="text-truncate">Vorname</h3>
         <span class="text-secondary value text-truncate">{{
